# Renate

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  NOTICE  README.md  README.rst  benchmarking.ipynb  data.json  dev_setup.sh  prepend_license.sh  pyproject.toml  requirements.txt  test_removethis.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: pre-commit
.github/scripts/: build_docs.sh  create_docs.sh  prepend_license.sh
.github/workflows/: close_stale_issues.yml  codeql.yml  coverage.yml  end_to_end_tests.yml  integration_tests.yml  pypi_publish.yml  run_renate.yml  run_unit_tests.yml  sagemaker_tests.yml  test_docs.yml
benchmarks/: README.rst  requirements.txt  run_benchmark.py
benchmarks/experiment_configs/: fine-tuning-arxiv.json  fine-tuning-clear10-vitb16.json  fine-tuning-clear10.json  fine-tuning-clear100-vitb16.json  fine-tuning-clear100.json  fine-tuning-core50-vitb16.json  fine-tuning-core50.json  fine-tuning-domainnet-vitb16.json  fine-tuning-domainnet.json  fine-tuning-fmow-vitb16.json  fine-tuning-fmow.json  fine-tuning-huffpost.json  fine-tuning-multitext.json  fine-tuning-yearbook-vitb16.json  fine-tuning-yearbook.json  joint-arxiv.json  joint-cifar100-vitb16.json  joint-clear10-vitb16.json  joint-clear10.json  joint-clear100-vitb16.json  joint-clear100.json  joint-core50-vitb16.json  joint-core50.json  joint-domainnet-vitb16.json  joint-domainnet.json  joint-fmow-vitb16.json  joint-fmow.json  joint-huffpost.json  joint-multitext.json  joint-yearbook-vitb16.json  joint-yearbook.json  offline-er-arxiv.json  offline-er-clear10-vitb16.json  offline-er-clear10.json  offline-er-clear100-vitb16.json  offline-er-clear100.json  offline-er-domainnet-vitb16.json  offline-er-domainnet.json  offline-er-fmow-vitb16.json  offline-er-fmow.json  (+19 more)
doc/: conf.py  index.rst  requirements.txt
doc/benchmarking/: index.rst  (+4 more)
fine_tuning_exps/: main.py  model_utils.py  quantization.py  training_args.py
git_hooks/: pre-commit
htmlcov/: class_index.html  d_0cdd16be7a702e7e_parsing_functions_py.html  d_0cdd16be7a702e7e_run_training_py.html  d_23a7d5afdbf3ffa1_base_py.html  d_23a7d5afdbf3ffa1_nlp_datasets_py.html  d_23a7d5afdbf3ffa1_vision_datasets_py.html  d_23a7d5afdbf3ffa1_wild_time_data_py.html  d_2b92bf162dfcf498___init___py.html  d_2b92bf162dfcf498_data_module_py.html  d_2b92bf162dfcf498_datasets_py.html  d_2f31d6683626bccf_experiment_config_py.html  d_2f31d6683626bccf_experimentation_py.html  d_2f31d6683626bccf_scenarios_py.html  d_35ab1ad2d2959277___init___py.html  d_35ab1ad2d2959277_prediction_strategies_py.html  d_35ab1ad2d2959277_renate_module_py.html  d_35ab1ad2d2959277_task_identification_strategies_py.html  d_4489a894d81ea6dd___init___py.html  d_4489a894d81ea6dd_buffer_py.html  d_4489a894d81ea6dd_storage_py.html  d_47d23511aabdc071___init___py.html  d_47d23511aabdc071_base_py.html  d_47d23511aabdc071_l2p_py.html  d_47d23511aabdc071_mlp_py.html  d_47d23511aabdc071_resnet_py.html  d_47d23511aabdc071_spromptmodel_py.html  d_47d23511aabdc071_transformer_py.html  d_47d23511aabdc071_vision_transformer_py.html  d_4ded2be095b7e607___init___py.html  d_4ded2be095b7e607_defaults_py.html  d_4ded2be095b7e607_types_py.html  d_5168071d1bd77c0e_learner_py.html  d_5168071d1bd77c0e_model_updater_py.html  d_520a3734a554cfd2_component_py.html  d_520a3734a554cfd2_losses_py.html  d_520a3734a554cfd2_reinitialization_py.html  d_780290ec843f73e0___init___py.html  d_780290ec843f73e0_training_py.html  d_82a1635f447b9426___init___py.html  d_82a1635f447b9426_config_spaces_py.html  (+108 more)
peft/: main.py
test/: conftest.py  datasets.py  dummy_datasets.py
(+362 files in other folders)
