[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Renate"
description = "Library for Continual Learning for Practitioners"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8, <=3.10"
dynamic = ["version", "readme", "dependencies"]

[project.optional-dependencies]
dev = [
    "black",
    # PyTest Dependencies
    "pytest>=7.0, <=7.1.2",
    "pytest-cov <=3.0.0",
    "pytest-helpers-namespace",
    ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "renate.__version__"}
readme = {file = ["README.rst"]}
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 80"

[tool.coverage.run]
source = ["src"]
